Fix button alignment in Task Detail action bar

--- a/src/App.css
+++ b/src/App.css
@@ -369,7 +369,7 @@ input::placeholder {
     color: black;
     position: relative;
     border-left: 6px solid transparent;
-    font-size: 16px;
+    font-size: 18px;
     font-family: "Apple SD Gothic Neo";
     font-weight: bold;
     height: 2.4vh;
@@ -525,7 +525,7 @@ input::placeholder {
 }
 
 .edit-task-box > *:not(.edit-task-detail-action-bar) {
-    margin-left: 2vw; /* Adjust the indentation as needed */
+    margin-left: 30px; /* Adjust the indentation as needed */
 }
 
 .edit-task-box input[name='title'] {
@@ -547,10 +547,10 @@ input::placeholder {
     height: 32px;
     font-size: 16px;
     font-weight: bold;
+    padding-left: 12px;
 }
 
 .task-number-input-box > .est-attempts-input-box {
-    padding-left: 12px;
     color: black;
     background-color: #DFDFDF;
     border: none;
@@ -574,6 +574,7 @@ input::placeholder {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     margin: 0;
     padding: 0;
     height: 3vh;
@@ -583,17 +584,17 @@ input::placeholder {
 }
 
 .edit-task-detail-action-bar button {
-    margin-left: 3vw;
+    margin: 0 16px;
     border: none;
     height: 1.2vh;
-    padding: 3px;
+    padding: 5px 10px;
     background-color: transparent;
     font-weight: bold;
     font-size: 18px;
 }
 
 .edit-task-detail-action-bar > .cancel-btn {
-    margin-left: 14vw;
+    margin-left: auto;
 }
 
 /*.create-task-form input {*/
